--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fitx-app",
-  "version": "1.0.2",
+  "name": "wegebus",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "npm install && npm run serve:ssr",
